<resources>
    <string name="app_name">QUIZ_APP</string>
    <string name="action_settings">Settings</string>
    <string name="full_name_hint">Full Name</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_in">Sign In</string>
    <string name="facebook_app_id">1567728580219956</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="title_activity_sign_in">SignInActivity</string>
    <string name="title_activity_home">Quiz World</string>
    <string name="home_text_select">Select a quiz category</string>
    <string name="profile_activity">Select a profile activity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="history_msg">Below is the history of your quizzes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_account">Create a new account</string>
    <string name="forgot_password"> Forgot Password?</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="splash_msg">Quiz World</string>
</resources>

