<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:id="@+id/quiz_layout"
    android:background="@color/colorPrimary"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.bukola_omotoso.quiz_app.MainActivity"
    tools:showIn="@layout/activity_main">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="@dimen/image_height"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/image_margin"
        android:layout_marginBottom="@dimen/image_margin"
        android:src="@drawable/quiz2"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:id="@+id/full_name"
        android:textColorHint="@color/colorTextIcon"
        android:hint="@string/full_name_hint"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:id="@+id/email"
        android:textColorHint="@color/colorTextIcon"
        android:hint="@string/email_hint"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    <EditText
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:layout_gravity="center_horizontal"
        android:id="@+id/password"
        android:textColorHint="@color/colorTextIcon"
        android:hint="@string/password_hint"/>

    <com.example.bukola_omotoso.quiz_app.TogglePasswordVisibilityButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/white_view_state_list"
        app:passwordEditText="@id/password"
        app:passwordInvisibleImageResource="@drawable/ic_visibility_white_18dp"
        app:passwordVisibleImageResource="@drawable/ic_visibility_off_white_18dp" />
    </LinearLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/image_margin"
    android:orientation="horizontal"
    android:gravity="center_horizontal">
    <Button
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:padding="@dimen/button_padding"
        android:text="@string/sign_up"
        android:layout_gravity="left"
        android:layout_marginRight="24dp"
        android:background="@drawable/item_state_list"
        android:textColor="@color/colorTextIcon"
        android:onClick="signUp"
        android:id="@+id/sign_up" />

    <Button
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:padding="@dimen/button_padding"
        android:text="@string/sign_in"
        android:background="@drawable/item_state_list"
        android:textColor="@color/colorTextIcon"
        android:onClick="sigin"
        android:id="@+id/sign_in"/>
</LinearLayout>

    <com.facebook.login.widget.LoginButton
        android:id="@+id/facebook_login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/button_padding"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:onClick="facebookLogin"/>

</LinearLayout>
